--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background: blue;
+    background: pink;
 }
 #renderCanvas {
     width: 80%;
