--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+@import "colors.scss";
+
 html,
 body {
     overflow: hidden;
@@ -6,8 +8,9 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background: pink;
+    background: $mainBackground;
 }
+
 #renderCanvas {
     width: 80%;
     height: 80%;
